--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,9 +1,62 @@
-@media (max-width: 576px) {}
+@media (max-width: 860px) {
+    .main {
+        width: 70rem;
+        height: 82rem;
+        border-radius: 1rem;
+        box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        position: relative;
+    }
 
-@media (max-width: 768px) {}
+    .player-0 {
+        width: 100%;
+        height: 50%;
+    }
 
-@media (max-width: 992px) {}
+    .player-1 {
+        width: 100%;
+        height: 50%;
+    }
 
-@media (max-width: 1200px) {}
+    .player__name {
+        margin-top: 8rem;
+    }
 
-@media (max-width: 1400px) {}
+    .player-0 .player__name {
+        margin-top: 10rem;
+    }
+
+    .dice-image {
+        top: 1rem;
+    }
+
+    .player__score {
+        display: block;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .player__currentscore {
+        width: 18rem;
+        height: 5rem;
+        gap: 0.7rem;
+        border-radius: 1rem;
+        margin: 0 auto;
+        background-color: #2a5f9b;
+        padding: 3.1rem 0;
+    }
+
+    .btn__new {
+        top: 2rem;
+    }
+
+    .btn__dice {
+        bottom: 7rem;
+    }
+
+    .btn__hold {
+        bottom: 1.5rem;
+    }
+}
