style: improve responsive for mobile phones

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,8 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: "Poppins Regular";
+    -webkit-tap-highlight-color: transparent;
+
 }
 
 /* 
