--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,7 +1,7 @@
 @media (max-width: 860px) {
     .main {
         width: 70rem;
-        height: 82rem;
+        height: 70rem;
         border-radius: 1rem;
         box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
         display: flex;
@@ -20,22 +20,27 @@
         height: 50%;
     }
 
+
     .player__name {
-        margin-top: 8rem;
+        margin-top: 11rem;
+        font-size: 3rem;
     }
 
-    .player-0 .player__name {
-        margin-top: 10rem;
+    .player-1 .player__name {
+        margin-top: 5.5rem;
     }
 
     .dice-image {
-        top: 1rem;
+        top: 0;
+        width: 7rem;
+        height: 7rem;
     }
 
     .player__score {
         display: block;
         margin-top: 1rem;
         margin-bottom: 1rem;
+        font-size: 4.5rem;
     }
 
     .player__currentscore {
